--- a/style.css
+++ b/style.css
@@ -61,14 +61,12 @@ header {
 /* main */
 main {
   width: 100%;
-  background-color: #e5e5e5;
 }
 
 /* container */
 .container {
   width: 100%;
   height: 100%;
-  background-color: #e5e5e5;
 }
 .hh {
   /* width: 100%; */
@@ -132,11 +130,15 @@ main {
 /* end of grid column */
 
 /* start of image container */
+.image-container {
+  width: 100%;
+  height: 245vh;
+  position: relative;
+}
 .decorating1 {
   width: 100%;
   display: flex;
   justify-content: center;
-  /* padding: 4rem; */
 }
 .decorating {
   max-width: 50%;
@@ -162,11 +164,7 @@ main {
   padding: 0.5rem 0;
   border-radius: 5rem;
 }
-.image-container {
-  /* width: 100%; */
-  height: 100%;
-  position: relative;
-}
+
 .decorating1 {
   /* width: 100%; */
   position: absolute;
@@ -241,3 +239,81 @@ main {
   color: #909090;
 }
 /* end of image-container */
+section{
+  width: 100%;
+}
+.real-time{
+  width: 100%;
+  position: relative;
+}
+.jimg{
+  width: 40rem;
+  position: absolute;
+  top: 5rem;
+  left: 8rem;
+  z-index: 999;
+}
+.jimg>img{
+  width: 100%;
+  height: 100%;
+}
+.real{
+  width: 30rem;
+  position: absolute;
+  top: 9rem;
+  left: 41rem;
+  z-index: 999;
+}
+.real1{
+  max-width: 100%;
+  border: 1px solid white;
+  background: white;
+  padding: 3rem 2rem;
+}
+.re{
+  font-size: 60px;
+  margin-bottom: 1.5rem;
+}
+.real1 :nth-child(2){
+  font-size: 25px;
+  color: gray;
+  line-height: 1.8rem;
+  margin-bottom: 2rem;
+}
+.learnt{
+  border: 1px solid #c1b688;
+  width: 25%;
+  text-align: center;
+  background-color: #c1b688;
+  padding: 1rem 0;
+  border-radius: 5rem;
+}
+.rempty{
+  position: absolute;
+  width: 15rem;
+  height: 15rem;
+  background-color: #E6E1CB;
+  border-radius: 15rem;
+  top: 3rem;
+  left: 62rem;
+}
+.rempty1{
+  position: absolute;
+  width: 40rem;
+  height: 20rem;
+  background-color: #C1B688;
+  top: 30rem;
+  left: 35rem;
+}
+.rempty3{
+  position: absolute;
+  fill: #C1B688;
+  top: 38rem;
+  z-index: 999;
+  left: -10rem;
+}
+.rempty3>svg{
+  width: 40rem;
+  height: 40vh;
+  fill: #C1B688;
+}
